styles: Fix footer list wrapping on medium-sized smartphones

--- a/css/wmui-style-guide.dev.css
+++ b/css/wmui-style-guide.dev.css
@@ -1088,15 +1088,15 @@ sup {
 	.footer__list li {
 		display: list-item;
 		float: left;
-		padding: 0;
+		padding: 0 0.8rem 0 0;
 	}
 
-	.footer__list li:before {
+	.footer__list li:after {
 		content: '\2022'; /* bullet dot: '•' */
-		padding: 0 0.8rem;
+		padding: 0 0 0 0.8rem;
 	}
 
-	.footer__list li:first-child:before {
+	.footer__list li:last-child:after {
 		content: '';
 		padding: 0;
 	}
